Reto 2 - Manejo de Fechas - Culminado

--- a/fechas/fechas.html
+++ b/fechas/fechas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +15,12 @@
         <option value="2020">2020</option>
         <option value="2021">2021</option>
         <option value="2022">2022</option>
+        <option value="2023">2023</option>
+        <option value="2024">2024</option>
     </select>
     <ul>
-        <li>01/06</li>
-        <li>30/08</li>
+        <li>10/25</li>
+        <li>08/30</li>
         <li>04/17</li>
         <li>04/01</li>
         <li>12/25</li>
@@ -26,10 +28,11 @@
     </ul>
     <form action="">
         <p>Calcular la cantidad de horas a compensar por feriados no laborales</p>
-        <input type="submit" value="Calcular y Mostrar Horas">
+        <input type="submit" value="Calcular y Mostrar Horas" id="btn-calcular">
     </form>
     <div id="content-dias-laborables">
         
     </div>
+    <script src="./fechas.js"></script>
 </body>
 </html>
