--- a/cajas/cajas.html
+++ b/cajas/cajas.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1 class="titulo principal">Una caja dentro de otra</h1>
+    <section id="cajas">
+        <h2> La recursividad en las cajas </h2>
+    </section>
     <script src="./cajas.js"></script>
 </body>
 </html>
