Eventos en Javascript

--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Manipulando el DOM desde JS</h1>
     <h2>Página para realizar pruebas de código</h2>
+    <form action="">
+        <input type="submit" id="btnEnviar" value="Enviar información">
+    </form>
     <script src="./dom.js"></script>
 </body>
 </html>
